Fix spacings on mobile (320px)
So this is a bit more presentable before I move on.

--- a/src/FilterControl/FilterControl.css
+++ b/src/FilterControl/FilterControl.css
@@ -27,5 +27,5 @@
     }
       .filter-control .filters--field--option {
         display: inline-block;
-        margin-right: 1em;
+        margin-right: 0.75em;
       }
